--- a/packages/scandipwa/src/route/Checkout/Checkout.style.scss
+++ b/packages/scandipwa/src/route/Checkout/Checkout.style.scss
@@ -16,6 +16,11 @@
 .Checkout {
     padding-block-end: var(--header-nav-height);
 
+    section,
+    &-Step {
+        position: unset;
+    }
+
     @include desktop {
         margin-block-start: var(--header-total-height);
     }
@@ -60,6 +65,13 @@
     &-Wrapper {
         margin: auto;
         padding: 0 16px;
+        position: unset;
+
+        form {
+            @include mobile {
+                position: unset;
+            }
+        }
 
         @include desktop {
             display: grid;
